some header components

--- a/sell/src/common/stylus/base.styl
+++ b/sell/src/common/stylus/base.styl
@@ -1,3 +1,8 @@
+body, html
+    line-height: 1
+    font-weight: 200
+    font-family: 'PingFang SC', 'STHeritiSC-Light', 'Helvetica-Light', Arial, sans-serif
+
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
     .border-1px
         &::after
@@ -9,3 +14,4 @@
         &::after
             -webkit-transform: scaleY(0.5)
             transform: scaleY(0.5)
+
