--- a/sell/src/common/stylus/mixin.styl
+++ b/sell/src/common/stylus/mixin.styl
@@ -1,6 +1,6 @@
 border-1px($color)
     position: relative
-    &:after
+    &:after    // & 引用border-1px
         display: block
         position: absolute
         left: 0
