--- a/sell/src/common/stylus/base.styl
+++ b/sell/src/common/stylus/base.styl
@@ -3,6 +3,16 @@ body, html
     font-weight: 200
     font-family: 'PingFang SC', 'STHeritiSC-Light', 'Helvetica-Light', Arial, sans-serif
 
+.clearfix
+    display: inline-block
+    &:after
+        display: block
+        content: "."
+        height: 0
+        line-height: 0
+        clear: both
+        visibility: hidden
+
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
     .border-1px
         &::after
